margin correction narrow images at < 92em

--- a/site.css
+++ b/site.css
@@ -882,13 +882,16 @@ figure img,
     padding: .6em .6em 1em;
   }
 
-  .page .right {
+  .page .right,
+  .page .right.narrow {
     margin: .5em -3.5em .5em 1.5em;
   }
 
-  .page .left {
+  .page .left,
+  .page .left.narrow {
     margin: .5em 1.5em .5em -3.5em;
   }
+
 
 }
 
